Fixed Login linking in html text

--- a/client/src/app/core/home/home.component.html
+++ b/client/src/app/core/home/home.component.html
@@ -24,8 +24,7 @@
       <p class="p-text">You are free to explore our <a [routerLink]="['/catalog']">Book Catalog</a> and take a look
          around. If you wish to join us,
          go and quickly <a [routerLink]="['/register']">Register</a>. Or, in case you are already one of us, welcome
-         back and
-         <a [routerLink]="['/register']">Login</a> ahead.
+         back and <a [routerLink]="['/login']">Login</a> ahead.
       </p>
       <p class="p-text">By registering or logging in you will be able to share the full experience, for example to tell
          us which books from your home library you are
