--- a/client/src/app/users/register/register.component.html
+++ b/client/src/app/users/register/register.component.html
@@ -15,12 +15,13 @@
          </mat-card-title-group>
       </mat-card-header>
       <mat-card-content>
-         <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
+         <form [formGroup]="registerForm" (ngSubmit)="onRegister()">
             <div class="label">
                <mat-form-field class="mat-form-field" appearance="fill">
                   <mat-label>Enter your First Name</mat-label>
                   <input matInput formControlName="firstName">
-                  <mat-error *ngIf="registerForm.get('firstName')?.errors?.['required']">First Name is required.</mat-error>
+                  <mat-error *ngIf="registerForm.get('firstName')?.errors?.['required']">First Name is
+                     required.</mat-error>
                   <mat-error *ngIf="registerForm.get('firstName')?.errors?.['minlength']">First Name must be at least 2
                      characters long.</mat-error>
                   <mat-error *ngIf="registerForm.get('firstName')?.errors?.['pattern']">
@@ -33,7 +34,8 @@
                <mat-form-field class="mat-form-field" appearance="fill">
                   <mat-label>Enter your Last Name</mat-label>
                   <input matInput formControlName="lastName">
-                  <mat-error *ngIf="registerForm.get('lastName')?.errors?.['required']">Last Name is required.</mat-error>
+                  <mat-error *ngIf="registerForm.get('lastName')?.errors?.['required']">Last Name is
+                     required.</mat-error>
                   <mat-error *ngIf="registerForm.get('lastName')?.errors?.['minlength']">Last Name must be at least 2
                      characters long.</mat-error>
                   <mat-error *ngIf="registerForm.get('lastName')?.errors?.['pattern']">
@@ -46,11 +48,14 @@
                <mat-form-field class="mat-form-field" appearance="fill">
                   <mat-label>Enter your Username</mat-label>
                   <input matInput formControlName="username">
-                  <mat-error *ngIf="registerForm.get('username')?.errors?.['required']">Username is required.</mat-error>
+                  <mat-error *ngIf="registerForm.get('username')?.errors?.['required']">Username is
+                     required.</mat-error>
                   <mat-error *ngIf="registerForm.get('username')?.errors?.['minlength']">Username must be at least 2
                      characters long.</mat-error>
-                  <mat-error *ngIf="registerForm.get('username')?.errors?.['maxlength']">Username must be no more than 20
-                     characters long.</mat-error>
+                  <mat-error *ngIf="registerForm.get('username')?.errors?.['maxlength']">Username must be no more than
+                     20 characters long.</mat-error>
+                  <mat-error *ngIf="registerForm.get('username')?.errors?.['usernameTaken']">Username is already
+                     taken.</mat-error>
                </mat-form-field>
             </div>
 
@@ -61,39 +66,44 @@
                   <mat-error *ngIf="registerForm.get('email')?.errors?.['required']">E-mail is required.</mat-error>
                   <mat-error *ngIf="registerForm.get('email')?.errors?.['minlength']">E-mail must be at least 10
                      characters long.</mat-error>
+                  <mat-error *ngIf="registerForm.get('email')?.errors?.['emailValid']">Invalid email
+                     address.</mat-error>
                </mat-form-field>
             </div>
 
-            <div class="label">
-               <mat-form-field class="mat-form-field" appearance="fill">
-                  <mat-label>Enter your Password</mat-label>
-                  <input matInput [type]="hide ? 'password' : 'text'" formControlName="password">
-                  <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
-                     <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
-                   </button>
-                  <mat-error *ngIf="registerForm.get('password')?.errors?.['required']">Password is required.</mat-error>
-                  <mat-error *ngIf="registerForm.get('password')?.errors?.['minlength']">Password must be between 6 and 24
-                     characters long.</mat-error>
-                  <mat-error *ngIf="registerForm.get('password')?.errors?.['maxlength']">Password must be between 6 and 24
-                     characters long.</mat-error>
-               </mat-form-field>
-            </div>
+            <ng-container formGroupName="passGroup">
+               <div class="label">
+                  <mat-form-field class="mat-form-field" appearance="fill">
+                     <mat-label>Enter your Password</mat-label>
+                     <input matInput [type]="hide ? 'password' : 'text'" formControlName="password">
+                     <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
+                        [attr.aria-pressed]="hide">
+                        <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+                     </button>
+                     <mat-error *ngIf="passGroup?.get('password')?.errors?.['required']">Password is
+                        required.</mat-error>
+                     <mat-error *ngIf="passGroup?.get('password')?.errors?.['minlength']">Password must be between 6
+                        and 24 characters long.</mat-error>
+                     <mat-error *ngIf="passGroup?.get('password')?.errors?.['maxlength']">Password must be between 6
+                        and 24 characters long.</mat-error>
+                  </mat-form-field>
+               </div>
 
-            <div class="label">
-               <mat-form-field class="mat-form-field" appearance="fill">
-                  <mat-label>Repeat Password</mat-label>
-                  <input matInput [type]="hideRe ? 'password' : 'text'" formControlName="rePassword">
-                  <button mat-icon-button matSuffix (click)="hideRe = !hideRe" [attr.aria-label]="'Hide repeat password'" [attr.aria-pressed]="hideRe">
-                    <mat-icon>{{hideRe ? 'visibility_off' : 'visibility'}}</mat-icon>
-                  </button>
-                  <mat-error *ngIf="registerForm.get('rePassword')?.errors?.['required']">Repeat Password is
-                     required.</mat-error>
-                  <mat-error *ngIf="registerForm.get('rePassword')?.errors?.['minlength']">Repeat Password must be between 6
-                     and 24 characters long.</mat-error>
-                  <mat-error *ngIf="registerForm.get('rePassword')?.errors?.['maxlength']">Repeat Password must be between 6
-                     and 24 characters long.</mat-error>
-               </mat-form-field>
-            </div>
+               <div class="label">
+                  <mat-form-field class="mat-form-field" appearance="fill">
+                     <mat-label>Repeat Password</mat-label>
+                     <input matInput [type]="hideRe ? 'password' : 'text'" formControlName="rePassword">
+                     <button mat-icon-button matSuffix (click)="hideRe = !hideRe"
+                        [attr.aria-label]="'Hide repeat password'" [attr.aria-pressed]="hideRe">
+                        <mat-icon>{{hideRe ? 'visibility_off' : 'visibility'}}</mat-icon>
+                     </button>
+                  </mat-form-field>
+                  <ng-container *ngIf="passGroup?.get('rePassword')?.touched">
+                     <mat-error *ngIf="passGroup?.errors?.['matchPass']">Repeat Password does not match
+                        Password!</mat-error><br>
+                  </ng-container>
+               </div>
+            </ng-container>
 
             <div class="label">
                <mat-form-field class="mat-form-field" appearance="fill">
