--- a/client/src/app/users/register/register.component.html
+++ b/client/src/app/users/register/register.component.html
@@ -54,8 +54,8 @@
                      characters long.</mat-error>
                   <mat-error *ngIf="registerForm.get('username')?.errors?.['maxlength']">Username must be no more than
                      20 characters long.</mat-error>
-                  <mat-error *ngIf="registerForm.get('username')?.errors?.['usernameTaken']">Username is already
-                     taken.</mat-error>
+                  <!-- <mat-error *ngIf="registerForm.get('username')?.errors?.['usernameTaken']">Username is already
+                     taken.</mat-error> -->
                </mat-form-field>
             </div>
 
