--- a/client/src/app/shared/navigation/navigation.component.html
+++ b/client/src/app/shared/navigation/navigation.component.html
@@ -7,7 +7,7 @@
    <button mat-raised-button class="mat-raised-button" fxFlex="50%" fxFlex.lt-sm="100%" [routerLink]="['/search']">
       <mat-icon>search</mat-icon>Search</button>
 
-   <ng-container *ngIf="!userService.isLoggedIn()">
+   <ng-container *ngIf="!userService.isLoggedIn">
       <button mat-raised-button class="mat-raised-button" fxFlex="50%" fxFlex.lt-sm="100%" color="accent"
          [routerLink]="['/login']">
          <mat-icon>transit_enterexit</mat-icon>Login</button>
@@ -16,7 +16,7 @@
          <mat-icon>account_circle</mat-icon>Register</button>
    </ng-container>
 
-   <ng-container *ngIf="userService.isLoggedIn()">
+   <ng-container *ngIf="userService.isLoggedIn">
       <button mat-raised-button class="mat-raised-button" fxFlex="50%" fxFlex.lt-sm="100%" color="accent"
       (click)="logout()">
          <mat-icon>exit_to_app</mat-icon>Logout</button>
