--- a/client/src/app/core/search/search.component.html
+++ b/client/src/app/core/search/search.component.html
@@ -1,6 +1,60 @@
-
 <div class="center-div" *ngIf="isLoading">
    <mat-spinner></mat-spinner>
 </div>
 
-<p>search works!</p>
+<div class="top-div" *ngIf="!isLoading">
+   <mat-card>
+      <mat-card-header>
+         <mat-card-title>
+            <h2 class="title"><mat-icon>search</mat-icon> Looking for a certain book?</h2>
+         </mat-card-title>
+      </mat-card-header>
+      <mat-card-content class="mat-card-content">
+         <form [formGroup]="searchBook" (ngSubmit)="onSubmit()">
+            <div class="label2">
+               <p>Book Title:</p>
+               <mat-form-field class="mat-form-field" appearance="fill">
+                  <mat-label>Title</mat-label>
+                  <input matInput formControlName="title">
+               </mat-form-field>
+            </div>
+
+            <div class="label2">
+               <p>Book Author:</p>
+               <mat-form-field class="mat-form-field" appearance="fill">
+                  <mat-label>Author</mat-label>
+                  <input matInput formControlName="author">
+               </mat-form-field>
+            </div>
+
+            <div class="label2">
+               <p>Book Genre:</p>
+               <mat-form-field class="mat-form-field" appearance="fill">
+                  <mat-label>Genre</mat-label>
+                  <mat-select formControlName="genre">
+                     <mat-option *ngFor="let genre of genres" [value]="genre">
+                        {{genre}}
+                     </mat-option>
+                  </mat-select>
+               </mat-form-field>
+            </div>
+
+            <div class="label2">
+               <p>Boon Owner in The Book Corner:</p>
+               <mat-form-field class="mat-form-field" appearance="fill">
+                  <mat-label>Owner</mat-label>
+                  <input matInput formControlName="owner">
+               </mat-form-field>
+            </div>
+
+            <mat-card-actions>
+               <button mat-raised-button color="primary" type="submit"><mat-icon>send</mat-icon>Search</button>
+            </mat-card-actions>
+
+         </form>
+      </mat-card-content>
+      <mat-card-footer>
+         <mat-progress-bar mode="indeterminate"></mat-progress-bar>
+      </mat-card-footer>
+   </mat-card>
+</div>
