Applied small changes to design

--- a/client/src/app/books/catalog/catalog.component.html
+++ b/client/src/app/books/catalog/catalog.component.html
@@ -61,7 +61,7 @@
          </mat-card-content>
          <mat-card-actions>
             <button mat-raised-button color="primary"
-               [routerLink]="['/catalog', book._id]"><mat-icon>chevron_right</mat-icon>Details</button>
+               [routerLink]="['/catalog', book._id]"><mat-icon>book</mat-icon>Details</button>
          </mat-card-actions>
       </mat-card>
    </mat-grid-tile>
