--- a/client/src/app/core/search/search.component.html
+++ b/client/src/app/core/search/search.component.html
@@ -40,7 +40,7 @@
             </div>
 
             <div class="label2">
-               <p>Boon Owner in The Book Corner:</p>
+               <p>Book Owner in The Book Corner:</p>
                <mat-form-field class="mat-form-field" appearance="fill">
                   <mat-label>Owner</mat-label>
                   <input matInput formControlName="owner">
