--- a/client/src/app/shared/navigation/navigation.component.html
+++ b/client/src/app/shared/navigation/navigation.component.html
@@ -3,7 +3,7 @@
    <button mat-raised-button class="mat-raised-button" fxFlex="50%" fxFlex.lt-sm="100%" [routerLink]="['/']">
       <mat-icon>home</mat-icon>Home</button>
    <button mat-raised-button class="mat-raised-button" fxFlex="50%" fxFlex.lt-sm="100%" [routerLink]="['/catalog']">
-      <mat-icon>book</mat-icon>Book Catalog</button>
+      <mat-icon>collections_bookmark</mat-icon>Book Catalog</button>
    <button mat-raised-button class="mat-raised-button" fxFlex="50%" fxFlex.lt-sm="100%" [routerLink]="['/search']">
       <mat-icon>search</mat-icon>Search</button>
 
