--- a/client/src/app/core/search/search.component.scss
+++ b/client/src/app/core/search/search.component.scss
@@ -18,12 +18,38 @@
    align-items: center;
 }
 
+.label{
+   font-weight: bold;
+   font-size: 14px;
+   font-style: oblique;
+}
+
 .label2 {
    flex: 1 0 calc(20% - 10px);
    margin: 5px;
 }
 
 button {
-   width: 100px;
+   width: 150px;
    margin: 5px;
 }
+
+.mat-form-field {
+   width: 100%;
+ }
+
+.stars {
+   display: flex;
+   align-items: center;
+}
+
+.results-container {
+   display: flex;
+   flex-wrap: wrap;
+   justify-content: space-between;
+ }
+ 
+ .results-container > div {
+   flex-basis: calc(33% - 20px); /* adjust as needed */
+   margin-bottom: 20px; /* adjust as needed */
+ }
