--- a/client/src/app/users/profile/profile.component.scss
+++ b/client/src/app/users/profile/profile.component.scss
@@ -1,1 +1,18 @@
 @import './../users.module.scss';
+
+.label{
+   font-weight: bold;
+}
+
+.sub-title {
+   font-size: medium;
+   margin: 10px;
+}
+
+.mat-raised-button {
+   margin: 20px;
+}
+
+.mat-form-field2 {
+   width: 100%;
+}
