--- a/client/src/app/books/view-book/view-book.component.html
+++ b/client/src/app/books/view-book/view-book.component.html
@@ -37,7 +37,7 @@
             <mat-card-subtitle><ng-template #bookIsFree>
                   <div class="sub-title">Status: Available</div>
                </ng-template></mat-card-subtitle>
-            <mat-card-subtitle *ngIf="loggedIn && !book.isRented"><button mat-raised-button
+            <mat-card-subtitle *ngIf="loggedIn && !book.isRented && !isOwner"><button mat-raised-button
                   color="primary"><mat-icon>bookmark</mat-icon>Request Book</button></mat-card-subtitle>
             <img mat-card-xl-image src="{{book.coverUrl}}" alt="book cover">
          </mat-card-title-group>
@@ -51,11 +51,11 @@
          <p>{{book.owner.username}}</p>
       </mat-card-content>
       <mat-card-actions>
-         <button mat-raised-button class="mat-raised-button" color="primary"><mat-icon> forum</mat-icon>View Book
+         <button mat-raised-button class="mat-raised-button" color="primary" *ngIf="loggedIn" ><mat-icon> forum</mat-icon>View Book
             Comments</button>
          <button mat-raised-button class="mat-raised-button" color="accent"
-            [routerLink]="['/catalog', book._id, 'edit-book']"><mat-icon>edit</mat-icon>Edit</button>
-         <button mat-raised-button class="mat-raised-button" color="warn" (click)="book._id && onDelete(book._id)">
+            [routerLink]="['/catalog', book._id, 'edit-book']" *ngIf="isOwner"><mat-icon>edit</mat-icon>Edit</button>
+         <button mat-raised-button class="mat-raised-button" color="warn" *ngIf="isOwner" (click)="book._id && onDelete(book._id)">
             <mat-icon>delete</mat-icon>Delete</button>
       </mat-card-actions>
       <mat-card-footer>
