--- a/client/src/app/shared/navigation/navigation.component.html
+++ b/client/src/app/shared/navigation/navigation.component.html
@@ -22,7 +22,7 @@
          <mat-icon>exit_to_app</mat-icon>Logout</button>
       <button mat-raised-button class="mat-raised-button" fxFlex="50%" fxFlex.lt-sm="100%" color="accent"
          [routerLink]="['/profile']">
-         <mat-icon>color_lens</mat-icon>Profile</button>
+         <mat-icon>color_lens</mat-icon>My Profile</button>
    </ng-container>
 
    <button mat-raised-button class="mat-raised-button" fxFlex="50%" fxFlex.lt-sm="100%" [routerLink]="['/about']">
